# crypto-assignment

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ecc_key.der  out  rainbow_keys.txt  rainbow_table.txt  test.txt
include/: analyse.h  bits.h  ecc.h  pgp.h  rainbow.h  rsa.h  spn.h  utils.h
src/: analyse.cpp  differential_cryptanalysis.cpp  ecc.cpp  main.cpp  math_utils.cpp  pgp.cpp  rainbow.cpp  rsa.cpp  spn.cpp
test/: test_analyse.cpp  test_pgp.cpp  test_rainbow.cpp  test_rsa.cpp  test_spn.cpp
